--- a/index.htm
+++ b/index.htm
@@ -1,14 +1,54 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Page Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- <link rel="stylesheet" type="text/css" media="screen" href="main.css" /> -->
+    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
     <script src="data.js"></script>
 </head>
+
 <body>
-    
+    <div class="wrapper">
+        <div class="id">
+            <h4>Id</h4>
+            <p>1</p>
+            <p>1</p>
+
+        </div>
+        <div class="name">
+            <h4>Name</h4>
+            <p>name</p>
+            <p>name</p>
+
+
+        </div>
+        <div class="gender">
+            <h4>Gender</h4>
+            <p>g</p>
+            <p>g</p>
+
+        </div>
+        <div class="email">
+            <h4>E-mail</h4>
+            <p>em</p>
+            <p>em</p>
+
+        </div>
+        <div class="filter">
+            <h3>Filters-></h3>
+            <h4>All</h4>
+            <h4>Male</h4>
+            <h4>Female</h4>
+        </div>
+        <div class="input">
+            <input type="text">
+            <input type="submit">
+        </div>
+    </div>
+
 </body>
+
 </html>
