table data dsplayed

--- a/index.htm
+++ b/index.htm
@@ -7,34 +7,41 @@
     <title>Page Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <script src="data.js"></script>
+   
 </head>
 
 <body>
     <div class="wrapper">
         <div class="id">
+            <ul class="id" id="id">
             <h4>Id</h4>
-            <p>1</p>
-            <p>1</p>
-
+            
+                
+            </ul>
         </div>
         <div class="name">
+            <ul  id="name">
             <h4>Name</h4>
-            <p>name</p>
-            <p>name</p>
+            <li>name</li>
+            <li>name</li>
+            </ul>
 
 
         </div>
         <div class="gender">
+            <ul id="gender">
             <h4>Gender</h4>
-            <p>g</p>
-            <p>g</p>
+            <li>g</li>
+            <li>g</li>
+            </ul>
 
         </div>
         <div class="email">
+            <ul id="email">
             <h4>E-mail</h4>
-            <p>em</p>
-            <p>em</p>
+            <li>em</li>
+            <li>em</li>
+            </ul>
 
         </div>
         <div class="filter">
@@ -48,7 +55,7 @@
             <input type="submit">
         </div>
     </div>
-
+<script src="data.js"></script>
 </body>
 
 </html>
