details of customer on right

--- a/index.htm
+++ b/index.htm
@@ -45,8 +45,11 @@
             </ul>
 
         </div>
-        <div class="detail">
-            
+        <div class="detail" id="det">
+            <h4>Details</h4>
+            <ul id="detail">
+                
+            </ul>
         </div>
         <div class="filter">
             <h3>Filters-></h3>
