--- a/index.htm
+++ b/index.htm
@@ -58,8 +58,8 @@
             <h4 class="female" id="female">Female</h4>
         </div>
         <div class="input">
-            <input type="text">
-            <input type="submit">
+            <input type="text" id="text">
+            <button id="submit">Submit</button>
         </div>
     </div>
 <script src="data.js"></script>
